--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ client/build
 .env.test.local
 .env.production.local
 /server/config/config.js
+./localhost-key.pem
+./localhost.pem
 
 npm-debug.log*
 yarn-debug.log*
