--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
   "author": "Dakota Rennemann",
   "license": "MIT",
   "dependencies": {
-    "concurrently": "^4.1.0",
-    "nodemon": "^1.18.10",
     "body-parser": "^1.19.0",
+    "concurrently": "^4.1.0",
     "express": "^4.17.1",
+    "express-openid-connect": "^0.6.0",
+    "mocha": "^6.2.1",
     "mongoose": "^5.7.1",
     "morgan": "^1.9.1",
+    "nodemon": "^1.18.10",
     "should": "^13.2.3",
-    "supertest": "^4.0.2",
-    "mocha": "^6.2.1"
+    "supertest": "^4.0.2"
   },
   "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme"
 }
