--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-test-renderer": "0.0.0-235a6c4af",
     "should": "^13.2.3",
     "supertest": "^4.0.2"
   },
