add to package.json

--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "dev": "concurrently \"nodemon server/server.js\" \"cd client && npm run start\"",
     "build": "cd client && npm build",
     "start": "node server/server.js",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "heroku-prebuild": "export NPM_CONFIG_PRODUCTION=false; export NODE_ENV=; NPM_CONFIG_PRODUCTION=false NODE_ENV=development npm install --only=dev --dev",
+    "heroku-postbuild": "export NPM_CONFIG_PRODUCTION=true; export NODE_ENV=production;"
   },
+  "engines": {
+    "node" : "13.6"
+  },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/UFWebApps/React_Template_Repo.git"
