--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "server": "nodemon server/server.js",
     "dev": "concurrently \"nodemon server/server.js\" \"cd client && npm run start\"",
     "build": "cd client && npm build",
-    "start": "node index.js",
+    "start": "node server/server.js",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+  },
+  "engines":{
+    "node" : "13.6"
   },
   "repository": {
     "type": "git",
