--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ client/build
 .env.production.local
 /server/config/config.js
 
+/client/debug.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
