--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nodemon": "^1.18.10",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "query-string": "^6.11.1",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-test-renderer": "0.0.0-235a6c4af",
     "should": "^13.2.3",
