--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "Dakota Rennemann",
   "license": "MIT",
   "dependencies": {
+    "async": "^3.2.0",
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
