--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "concurrently": "^4.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "libmoji": "^2.3.0",
     "mocha": "^6.2.1",
     "mongoose": "^5.7.1",
     "morgan": "^1.9.1",
